@startuml

class Entite #FFB6C1{
- x: int
- y: int
- pv: int
+ Position(int, int)
+ getX(): int
+ getY(): int
+ setX(int)
+ setY(int)
+ deplacer(Labyrinthe, String)
+ attaquer(Entite)
+ subirDegats(int)
}

Entite <|-- Monstre

class Monstre{
+ Monstre(int, int)
+ deplacer(Labyrinthe)
+ estProcheDePerso()
}

Entite <|-- Perso

class Perso{
+ Perso(int, int)
+ etrePresent (int, int)
}

Monstre "*" <-- "1" Labyrinthe : -monstre
Perso "1" <-- "1" Labyrinthe : - pj

class Labyrinthe {
- murs: boolean[][]
+ getSuivant(int, int, String)
+ Labyrinthe(String, int)
+ ajoutMonstreLaby()
+ getMonstre()
+ deplacerPerso(String)
+ peutSeDeplacer(int ,int): boolean
+ etreFini(): boolean
+ getLengthY(): int
+ getLength(): int
+ getMur(int, int): boolean
+ getPerso(): Perso
}

Labyrinthe "1" <--* "1" LabyJeu : - Laby

class LabyJeu{
+ LabyJeu(Labyrinthe)
+ update(double, Clavier)
+ etreFini(): boolean
+ init()
}

LabyJeu <.. Main

class Main{
- main()
- main(String[])
}

Labyrinthe <.. Main
LabyDessin <.. Main

class LabyDessin{
- LabyDessin()
- dessinerJeu(Jeu, Canvas)
}

hide Labyrinthe
hide LabyJeu
hide Main
hide LabyDessin

@enduml